# water-sim2

./: CMakeLists.txt  PLAN.md  build.sh  compile_commands.json  imgui.ini  perf_notes.md  run.sh
scenes/: 01_column_left.json  02_wide_block.json  03_two_columns.json  04_column_large.json  funnel.json  pillar.json  platform.json  pressure.json  two_pillars.json
shaders/: particle.frag  particle.vert  screenspace.frag  screenspace.vert
src/: imgui_widgets.h  kernel.cu  kernel.cuh  main.cpp  particle_pipeline.cpp  particle_pipeline.h  pipeline.h  renderer.cpp  renderer.h  scene_desc.cpp  scene_desc.h  scenes.cpp  scenes.h  screenspace_pipeline.cpp  screenspace_pipeline.h  shader_program.cpp  shader_program.h
